--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,10 @@ jobs:
             . venv/bin/activate
             flake8 ./timetracker
             isort --recursive --check-only --diff ./timetracker
-            django-admin collectstatic --clear --noinput
-            django-admin makemigrations --check --noinput
-            django-admin check
-            django-admin test
+            ./manage.py collectstatic --clear --noinput
+            ./manage.py makemigrations --check --noinput
+            ./manage.py check
+            ./manage.py test
 workflows:
   version: 2
   build_and_test:
