--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@ jobs:
     docker:
       - image: circleci/python:3.6-stretch-node
         environment:
-          DJANGO_SETTINGS_MODULE=timetracker.settings.production
-          SECRET_KEY=testingsecretkey
-          SECURE_SSL_REDIRECT=false
-          ALLOWED_HOSTS=localhost
+          DJANGO_SETTINGS_MODULE: timetracker.settings.production
+          SECRET_KEY: testingsecretkey
+          SECURE_SSL_REDIRECT: false
+          ALLOWED_HOSTS: localhost
     steps:
       - checkout
       - run:
