--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,23 @@ jobs:
             ./manage.py makemigrations --check --noinput
             ./manage.py check
             ./manage.py test
+  deploy:
+    docker:
+      - image: buildpack-deps:trusty
+    steps:
+      - checkout
+      - run:
+          name: deploy master to heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 workflows:
   version: 2
-  build_and_test:
+  build-deploy:
     jobs:
       - test
+      - deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
