--- a/heroku.yml
+++ b/heroku.yml
@@ -13,3 +13,8 @@ release:
   image: web
   command:
     - django-admin createcachetable && django-admin migrate --noinput
+run:
+  worker:
+    image: web
+    command:
+      - celery worker --app=timetracker
