--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ exclude = */migrations/*,*/node_modules/*
 [isort]
 known_first_party=timetracker
 known_django=django
-known_third_party=dj_database_url
+known_third_party=dj_database_url,raven,rest_framework
 skip=migrations,node_modules
 sections=STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
