--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "time tracker ============",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.4.3",
     "bulma": "^0.7.2",
     "flatpickr": "^4.5.2",
-    "highcharts": "^7.1.0"
+    "highcharts": "^7.1.0",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
