--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bulma": "^0.7.2",
     "flatpickr": "^4.5.2",
     "highcharts": "^7.1.0",
+    "humps": "^2.0.1",
     "moment": "^2.24.0"
   },
   "devDependencies": {
